added a git code

--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my-first-repository</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="div-1">
+        <h3>My First Github Website</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At laboriosam sint quibusdam fuga aut maxime quia illo inventore odit, dolorum obcaecati explicabo amet placeat delectus ratione, exercitationem praesentium incidunt vero!</p>
+    </div>
+    <div class="div-1">
+        <h3>My Second Github Website</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At laboriosam sint quibusdam fuga aut maxime quia illo inventore odit, dolorum obcaecati explicabo amet placeat delectus ratione, exercitationem praesentium incidunt vero!</p>
+    </div>
+    <div class="div-1">
+        <h3>My Third Github Website</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At laboriosam sint quibusdam fuga aut maxime quia illo inventore odit, dolorum obcaecati explicabo amet placeat delectus ratione, exercitationem praesentium incidunt vero!</p>
+    </div>
 </body>
 </html>
